Refactored firmware main.c

--- a/.cproject
+++ b/.cproject
@@ -43,11 +43,13 @@
 									<listOptionValue builtIn="false" value="../Drivers/CMSIS/Device/ST/STM32F4xx/Include"/>
 									<listOptionValue builtIn="false" value="../Drivers/CMSIS/Include"/>
 									<listOptionValue builtIn="false" value="../Inc"/>
-									<listOptionValue builtIn="false" value="../bluenrg-stack//Middlewares/ST/STM32_BlueNRG/STM32F4xx_HAL_BlueNRG_Drivers/inc"/>
-									<listOptionValue builtIn="false" value="../bluenrg-stack/Middlewares/ST/STM32_BlueNRG/Interface"/>
-									<listOptionValue builtIn="false" value="../bluenrg-stack/Middlewares/ST/STM32_BlueNRG/SimpleBlueNRG_HCI/includes"/>
-									<listOptionValue builtIn="false" value="../bluenrg-stack/BSP/STM32F4xx-Nucleo"/>
-									<listOptionValue builtIn="false" value="../bluenrg-stack/BSP/X-NUCLEO-IDB0xA1"/>
+									<listOptionValue builtIn="false" value="../st-stack//Middlewares/ST/STM32_BlueNRG/STM32F4xx_HAL_BlueNRG_Drivers/inc"/>
+									<listOptionValue builtIn="false" value="../st-stack/Middlewares/ST/STM32_BlueNRG/Interface"/>
+									<listOptionValue builtIn="false" value="../st-stack/Middlewares/ST/STM32_BlueNRG/SimpleBlueNRG_HCI/includes"/>
+									<listOptionValue builtIn="false" value="../st-stack/BSP/Components"/>
+									<listOptionValue builtIn="false" value="../st-stack/BSP/STM32F4xx-Nucleo"/>
+									<listOptionValue builtIn="false" value="../st-stack/BSP/X-NUCLEO-IDB0xA1"/>
+									<listOptionValue builtIn="false" value="../st-stack/BSP/X_NUCLEO_IKS01A2"/>
 								</option>
 								<option id="com.atollic.truestudio.gcc.symbols.defined.1670122205" name="Defined symbols" superClass="com.atollic.truestudio.gcc.symbols.defined" useByScannerDiscovery="false" valueType="definedSymbols">
 									<listOptionValue builtIn="false" value="__weak=&quot;__attribute__((weak))&quot;"/>
@@ -112,6 +114,20 @@
 							<tool id="com.atollic.truestudio.ar.base.1186430235" name="Archiver" superClass="com.atollic.truestudio.ar.base"/>
 						</toolChain>
 					</folderInfo>
+					<folderInfo id="com.atollic.truestudio.exe.debug.1518366166.1612600708" name="/" resourcePath="st-stack">
+						<toolChain id="com.atollic.truestudio.exe.debug.toolchain.770744541" name="Atollic ARM Tools" superClass="com.atollic.truestudio.exe.debug.toolchain" unusedChildren="">
+							<option id="com.atollic.truestudio.general.runtimelib.937606395.1186898112" name="Runtime Library" superClass="com.atollic.truestudio.general.runtimelib.937606395"/>
+							<option id="com.atollic.truestudio.toolchain_options.mcu.1776217845.1772206013" name="Microcontroller" superClass="com.atollic.truestudio.toolchain_options.mcu.1776217845"/>
+							<option id="com.atollic.truestudio.toolchain_options.vendor.993246712.1275629107" name="Vendor name" superClass="com.atollic.truestudio.toolchain_options.vendor.993246712"/>
+							<tool id="com.atollic.truestudio.exe.debug.toolchain.as.1063868579" name="Assembler" superClass="com.atollic.truestudio.exe.debug.toolchain.as.1545899283"/>
+							<tool id="com.atollic.truestudio.exe.debug.toolchain.gcc.67132630" name="C Compiler" superClass="com.atollic.truestudio.exe.debug.toolchain.gcc.1836874447"/>
+							<tool id="com.atollic.truestudio.exe.debug.toolchain.ld.149970195" name="C Linker" superClass="com.atollic.truestudio.exe.debug.toolchain.ld.1444973427"/>
+							<tool id="com.atollic.truestudio.exe.debug.toolchain.gpp.652845293" name="C++ Compiler" superClass="com.atollic.truestudio.exe.debug.toolchain.gpp.981298185"/>
+							<tool id="com.atollic.truestudio.exe.debug.toolchain.ldcc.644886266" name="C++ Linker" superClass="com.atollic.truestudio.exe.debug.toolchain.ldcc.428260"/>
+							<tool id="com.atollic.truestudio.ar.base.1268884026" name="Archiver" superClass="com.atollic.truestudio.ar.base.1186430235"/>
+							<tool id="com.atollic.truestudio.exe.debug.toolchain.secoutput.1584210267" name="Other" superClass="com.atollic.truestudio.exe.debug.toolchain.secoutput.839033486"/>
+						</toolChain>
+					</folderInfo>
 					<fileInfo id="com.atollic.truestudio.exe.debug.1518366166.1139903888" name="stm32_bluenrg_ble.h" rcbsApplicability="disable" resourcePath="bluenrg-stack/BSP/X-NUCLEO-IDB0xA1/stm32_bluenrg_ble.h" toolsToInvoke=""/>
 					<folderInfo id="com.atollic.truestudio.exe.debug.1518366166.230890412" name="/" resourcePath="bluenrg-stack/Middlewares/ST/STM32_BlueNRG/Prof_Periph">
 						<toolChain id="com.atollic.truestudio.exe.debug.toolchain.1665569381" name="Atollic ARM Tools" superClass="com.atollic.truestudio.exe.debug.toolchain" unusedChildren="">
@@ -142,6 +158,7 @@
 						<entry excluding="stm32xx_it.h" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Inc"/>
 						<entry excluding="stm32xx_it.c" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Src"/>
 						<entry excluding="Middlewares/ST/STM32_BlueNRG/Prof_Periph|Middlewares/ST/TimerServer|BSP/STM32F4xx-Nucleo/stm32f4xx_nucleo_bluenrg_dma_lp.h|Middlewares/ST/STM32_BlueNRG/BLE_ANCS_Lib|Middlewares/ST/STM32_BlueNRG/Prof_Periph_Lib|Middlewares/ST/STM32_BlueNRG/Prof_Centr|Middlewares/ST/STM32_BlueNRG/Prof_Centr_Lib|Middlewares/ST/STM32_BlueNRG/SimpleBlueNRG_HCI/hci/controller/bluenrg_utils_small.c" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="bluenrg-stack"/>
+						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="st-stack"/>
 						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="startup"/>
 					</sourceEntries>
 				</configuration>
