--- a/Android/version_2/SailorAid/app/build.gradle
+++ b/Android/version_2/SailorAid/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.google.android.gms:play-services-maps:11.0.4'
     compile 'com.google.android.gms:play-services-location:11.0.4'
+    compile 'com.jjoe64:graphview:4.2.1'
 }
