--- a/Android/version_3/SailorAid/app/src/main/AndroidManifest.xml
+++ b/Android/version_3/SailorAid/app/src/main/AndroidManifest.xml
@@ -10,11 +10,13 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
 
     <uses-feature android:glEsVersion="0x00020000" android:required="true" />
 
     <application
         android:allowBackup="true"
+        android:screenOrientation="portrait"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -45,10 +47,12 @@
         </activity>
         <activity android:name=".HistoryActivity" />
 
-        <activity android:name=".GraphActivity" />
+        <activity android:name=".GraphActivity"
+            android:screenOrientation="landscape"
+            android:configChanges="keyboardHidden|orientation|screenSize"/>
 
-        <service android:name=".bluetooth.BTLEConnection"
-             />
+        <service android:name=".bluetooth.BTLEConnection" />
+        <service android:name=".datalog.SailLog" />
     </application>
 
 </manifest>
